--- a/Machine_BubblePoint_4.3/src/application/first.fxml
+++ b/Machine_BubblePoint_4.3/src/application/first.fxml
@@ -174,12 +174,6 @@
                   <Font name="Calibri" size="15.0" />
                </font>
             </Label>
-            <Rectangle arcHeight="10.0" arcWidth="2.0" fill="#1f93ff00" height="32.0" layoutX="1325.0" layoutY="11.0" stroke="WHITE" strokeMiterLimit="0.0" strokeType="INSIDE" width="32.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="5.0" />
-            <Button fx:id="btnclose" layoutX="1326.0" layoutY="12.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" styleClass="btnCss" text="X" textFill="WHITE" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="5.0">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </Button>
             <Button fx:id="btnport" layoutX="1324.0" layoutY="127.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" styleClass="cmbtrasperant" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="124.0">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
@@ -188,6 +182,36 @@
                      </image>
                   </ImageView>
                </graphic>
+            </Button>
+            <Button fx:id="btnclose" layoutX="924.0" layoutY="72.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" styleClass="btnCss" textFill="WHITE" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../permeability_iit/permiability_iit/src/application/close2.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="btnzoom" layoutX="924.0" layoutY="72.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" styleClass="btnCss" textFill="WHITE" AnchorPane.rightAnchor="43.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../permeability_iit/permiability_iit/src/application/fullscreen.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
     
          
