--- a/Machine_BubblePoint_4.3/src/application/Nexitpopup.fxml
+++ b/Machine_BubblePoint_4.3/src/application/Nexitpopup.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -9,36 +10,43 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="250.0" fx:id="root1" maxWidth="700.0" minHeight="250.0" minWidth="700.0" prefHeight="250.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.NExitpopupController">
+<AnchorPane fx:id="root1" maxHeight="180.0" maxWidth="485.0" minHeight="180.0" minWidth="485.0" prefHeight="180.0" prefWidth="485.0" stylesheets="@new_application.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.NExitpopupController">
    <children>
-      <AnchorPane maxHeight="250.0" maxWidth="700.0" minHeight="250.0" minWidth="700.0" prefHeight="250.0" prefWidth="700.0" style="-fx-border-width: 5; -fx-border-color: white;" styleClass="firstpagebk" stylesheets="@../application/new_application.css" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane maxHeight="180.0" maxWidth="700.0" minHeight="180.0" minWidth="485.0" prefHeight="180.0" prefWidth="485.0" style="-fx-border-width: 5; -fx-border-color: white;" styleClass="firstpagebk" stylesheets="@../application/new_application.css" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="77.0" fitWidth="700.0" layoutX="2.0" layoutY="-1.0" pickOnBounds="true" AnchorPane.bottomAnchor="253.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="0.0">
-               <image>
-                  <Image url="@saveproject.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnstart" layoutX="375.0" layoutY="139.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="130.0" style="-fx-background-radius: 50;" styleClass="linear-grad-to-bottom-right" text="Yes" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="22.0" />
-               </font>
-            </Button>
-            <Label layoutX="34.0" layoutY="22.0" text="Are you sure want to Exit ?">
-               <styleClass>
-                  <String fx:value="font-montserrat-semiBold" />
-                  <String fx:value="col-gray70" />
-               </styleClass>
+            <Label layoutX="254.0" layoutY="112.0" />
+            <Label layoutX="17.0" layoutY="73.0" text="Are you sure want to Exit ?" textFill="WHITE">
                <font>
                   <Font size="22.0" />
                </font>
             </Label>
-            <Button fx:id="btncancel" layoutX="173.0" layoutY="140.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="130.0" style="-fx-background-radius: 50;" styleClass="linear-grad-to-bottom-right" text="Cancel" textFill="WHITE">
+            <ImageView fitHeight="48.0" fitWidth="198.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true">
+               <image>
+                  <Image url="@saveproject.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="17.0" layoutY="15.0" styleClass="font-montserrat-semiBold" text="Confirmation" textFill="#254f94">
                <font>
-                  <Font name="System Bold" size="22.0" />
+                  <Font name="System Bold" size="19.0" />
                </font>
-            </Button>
-            <Label layoutX="254.0" layoutY="112.0" />
+            </Label>
          </children>
       </AnchorPane>
+      <Button fx:id="btnstart" layoutX="251.0" layoutY="180.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="86.0" style="-fx-background-radius: 50;" styleClass="background-col-white" text="Yes" textFill="#254f94" AnchorPane.leftAnchor="380.0" AnchorPane.topAnchor="125.0">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="btncancel" layoutX="253.0" layoutY="140.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="86.0" style="-fx-background-radius: 50;" styleClass="background-col-white" text="No" textFill="#254f94" AnchorPane.leftAnchor="280.0" AnchorPane.topAnchor="125.0">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
