--- a/Machine_BubblePoint_4.3/src/application/first.fxml
+++ b/Machine_BubblePoint_4.3/src/application/first.fxml
@@ -81,7 +81,7 @@
                   <Font name="Calibri" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="lblconnection" layoutX="1201.0" layoutY="121.0" prefHeight="36.0" prefWidth="124.0" text="------" textFill="WHITESMOKE">
+            <Label fx:id="lblconnection" layoutX="1201.0" layoutY="121.0" prefHeight="36.0" prefWidth="124.0" textFill="WHITESMOKE">
                <font>
                   <Font name="Calibri Bold" size="15.0" />
                </font>
@@ -174,15 +174,6 @@
                   <Font name="Calibri" size="15.0" />
                </font>
             </Label>
-            <Button fx:id="btnport" layoutX="1324.0" layoutY="127.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" styleClass="cmbtrasperant" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="124.0">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../porometer4.3/Machine_Porometer_4.3/src/application/refreshimgl.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
             <Button fx:id="btnclose" layoutX="924.0" layoutY="72.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" styleClass="btnCss" textFill="WHITE" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="7.0">
                <font>
                   <Font name="System Bold" size="15.0" />
@@ -212,6 +203,16 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+            </Button>
+            <Button fx:id="btnport" layoutX="1205.0" layoutY="126.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="116.0" style="-fx-border-width: 0.5px; -fx-border-color: white;" styleClass="btnCss" text="Set Port" textFill="WHITE" />
+            <Button fx:id="btnrestart" layoutX="1235.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" styleClass="cmbtrasperant" AnchorPane.rightAnchor="85.0">
+               <graphic>
+                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@refreshimgl.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
     
          
