--- a/Machine_BubblePoint_4.3/src/application/first.fxml
+++ b/Machine_BubblePoint_4.3/src/application/first.fxml
@@ -205,11 +205,11 @@
                </cursor>
             </Button>
             <Button fx:id="btnport" layoutX="1205.0" layoutY="126.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="116.0" style="-fx-border-width: 0.5px; -fx-border-color: white;" styleClass="btnCss" text="Set Port" textFill="WHITE" />
-            <Button fx:id="btnrestart" layoutX="1235.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" styleClass="cmbtrasperant" AnchorPane.rightAnchor="85.0">
+            <Button fx:id="btnrestart" layoutX="1235.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" styleClass="cmbtrasperant" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="5.0">
                <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@refreshimgl.png" />
+                        <Image url="@refreshimgl1.png" />
                      </image>
                   </ImageView>
                </graphic>
