--- a/Machine_BubblePoint_4.3/src/report/first.fxml
+++ b/Machine_BubblePoint_4.3/src/report/first.fxml
@@ -98,7 +98,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Label fx:id="filelab" layoutX="884.0" layoutY="622.0" prefHeight="26.0" prefWidth="50.0" styleClass="col-gray70" text="0/10">
+      <Label fx:id="filelab" layoutX="884.0" layoutY="622.0" prefHeight="26.0" prefWidth="50.0" styleClass="col-gray70" text="0/1">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -135,6 +135,13 @@
             <Font name="Calibri Bold" size="14.0" />
          </font>
       </Label>
+      <AnchorPane layoutX="288.0" layoutY="125.0" prefHeight="40.0" prefWidth="227.0" stylesheets="@togglecss1.css">
+         <children>
+            <ToggleButton fx:id="tweek" layoutX="20.0" layoutY="8.0" mnemonicParsing="false" prefWidth="60.0" styleClass="mytoggle-button" text="Week" />
+            <ToggleButton fx:id="tmonth" layoutX="80.0" layoutY="8.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" styleClass="mytoggle-button" text="Month" />
+            <ToggleButton fx:id="tall" layoutX="140.0" layoutY="8.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" styleClass="mytoggle-button" text="All" />
+         </children>
+      </AnchorPane>
    </children>
    <stylesheets>
       <URL value="@../application/application.css" />
