--- a/Machine_BubblePoint_4.3/src/ConfigurationPart/Nconfigurepage.fxml
+++ b/Machine_BubblePoint_4.3/src/ConfigurationPart/Nconfigurepage.fxml
@@ -181,16 +181,16 @@
                               </Label>
                               <Rectangle arcHeight="300.0" arcWidth="30.0" fill="#1f93ff00" height="28.0" layoutX="693.0" layoutY="43.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: white;" visible="false" width="46.0" />
                               <JFXToggleButton fx:id="ab1" alignment="BASELINE_CENTER" layoutX="684.0" layoutY="29.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" visible="false" />
-                              <Line endX="238.0" layoutX="136.0" layoutY="131.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" />
+                              <Line endX="850.0" layoutX="136.0" layoutY="131.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" />
                               <Line layoutX="401.0" layoutY="106.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
                               <Line layoutX="590.0" layoutY="63.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" visible="false" />
-                              <Line endX="227.0" layoutX="149.0" layoutY="203.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" />
+                              <Line endX="850.0" layoutX="149.0" layoutY="203.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" />
                               <Line layoutX="401.0" layoutY="178.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
                               <Line layoutX="590.0" layoutY="135.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" visible="false" />
                               <Line endX="423.0" layoutX="143.0" layoutY="233.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" visible="false" />
-                              <Line layoutX="402.0" layoutY="251.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
+                              <Line layoutX="401.0" layoutY="252.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
                               <Line endX="423.0" layoutX="142.0" layoutY="302.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" visible="false" />
-                              <Line layoutX="401.0" layoutY="320.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
+                              <Line layoutX="400.0" layoutY="320.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
                               <Line endX="227.0" layoutX="148.0" layoutY="278.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" AnchorPane.leftAnchor="47.0" />
                               <Line endX="227.0" layoutX="149.0" layoutY="347.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" />
                            </children>
@@ -221,10 +221,10 @@
                         <JFXToggleButton fx:id="ab1" alignment="BASELINE_CENTER" layoutX="815.0" layoutY="77.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" />
                         <Line layoutX="699.0" layoutY="111.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
                         <Line layoutX="699.0" layoutY="183.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
-                        <Rectangle arcHeight="500.0" arcWidth="42.0" fill="#2197ff00" height="50.0" layoutX="411.0" layoutY="79.0" opacity="0.61" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="200.0" />
-                        <ComboBox fx:id="cmbpg1" layoutX="411.0" layoutY="79.0" prefHeight="48.0" prefWidth="200.0" styleClass="cmbtrasperant" />
-                        <Rectangle arcHeight="500.0" arcWidth="42.0" fill="#2197ff00" height="50.0" layoutX="411.0" layoutY="151.0" opacity="0.61" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="200.0" />
-                        <ComboBox fx:id="cmbpg2" layoutX="411.0" layoutY="151.0" prefHeight="48.0" prefWidth="200.0" styleClass="cmbtrasperant" />
+                        <Rectangle arcHeight="500.0" arcWidth="42.0" fill="#2197ff00" height="50.0" layoutX="411.0" layoutY="79.0" opacity="0.61" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="200.0" AnchorPane.topAnchor="76.0" />
+                        <ComboBox fx:id="cmbpg1" layoutX="411.0" layoutY="79.0" prefHeight="48.0" prefWidth="200.0" styleClass="cmbtrasperant" AnchorPane.topAnchor="76.0" />
+                        <Rectangle arcHeight="500.0" arcWidth="42.0" fill="#2197ff00" height="50.0" layoutX="411.0" layoutY="151.0" opacity="0.61" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="200.0" AnchorPane.topAnchor="148.0" />
+                        <ComboBox fx:id="cmbpg2" layoutX="411.0" layoutY="151.0" prefHeight="48.0" prefWidth="200.0" styleClass="cmbtrasperant" AnchorPane.topAnchor="148.0" />
                         <Label layoutX="448.0" layoutY="34.0" text="Select Unit" textFill="#0e3c87">
                            <font>
                               <Font size="20.0" />
@@ -468,25 +468,25 @@
                               <Font size="22.0" />
                            </font>
                         </Label>
-                        <Rectangle arcHeight="500.0" arcWidth="42.0" fill="#2197ff00" height="50.0" layoutX="227.0" layoutY="220.0" opacity="0.61" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="200.0" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="200.0" />
-                        <ComboBox fx:id="cmbflow" layoutX="227.0" layoutY="220.0" prefHeight="48.0" prefWidth="200.0" promptText="Flow" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="200.0">
+                        <Rectangle arcHeight="500.0" arcWidth="42.0" fill="#2197ff00" height="50.0" layoutX="155.0" layoutY="198.0" opacity="0.61" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="200.0" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="198.0" />
+                        <ComboBox fx:id="cmbflow" layoutX="155.0" layoutY="198.0" prefHeight="48.0" prefWidth="200.0" promptText="Flow" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="198.0">
                            <styleClass>
                               <String fx:value="cmbtrasperant" />
                               <String fx:value="combo-box1" />
                            </styleClass>
                         </ComboBox>
-                        <Label layoutX="147.0" layoutY="229.0" styleClass="col-gray70" text="Flow" textFill="WHITE" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="200.0">
+                        <Label layoutX="50.0" layoutY="207.0" styleClass="col-gray70" text="Flow" textFill="WHITE" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="207.0">
                            <font>
                               <Font size="22.0" />
                            </font>
                         </Label>
-                        <Label layoutX="137.0" layoutY="316.0" styleClass="col-gray70" text="Diameter" textFill="WHITE" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="280.0">
+                        <Label layoutX="55.0" layoutY="286.0" styleClass="col-gray70" text="Diameter" textFill="WHITE" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="286.0">
                            <font>
                               <Font size="22.0" />
                            </font>
                         </Label>
-                        <Rectangle arcHeight="500.0" arcWidth="42.0" fill="#2197ff00" height="50.0" layoutX="243.0" layoutY="309.0" opacity="0.61" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="200.0" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="280.0" />
-                        <ComboBox fx:id="cmblenghth" layoutX="243.0" layoutY="309.0" prefHeight="48.0" prefWidth="200.0" promptText="Length" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="280.0">
+                        <Rectangle arcHeight="500.0" arcWidth="42.0" fill="#2197ff00" height="50.0" layoutX="155.0" layoutY="277.0" opacity="0.61" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="200.0" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="277.0" />
+                        <ComboBox fx:id="cmblenghth" layoutX="155.0" layoutY="277.0" prefHeight="48.0" prefWidth="200.0" promptText="Length" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="277.0">
                            <styleClass>
                               <String fx:value="cmbtrasperant" />
                               <String fx:value="combo-box1" />
@@ -504,6 +504,10 @@
                               <Font size="25.0" />
                            </font>
                         </Label>
+                        <Line endX="210.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="182.0" />
+                        <Line endX="210.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="262.0" />
+                        <Line endX="210.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="340.0" />
+                        <Line endX="210.0" layoutX="10.0" layoutY="10.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="450.0" />
                      </children></AnchorPane>
                </content>
             </Tab>
@@ -537,19 +541,19 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Label layoutX="105.0" layoutY="213.0" styleClass="col-gray70" text="Compluter" textFill="WHITE">
+                        <Label layoutX="93.0" layoutY="131.0" styleClass="col-gray70" text="Compluter" textFill="WHITE">
                            <font>
                               <Font size="22.0" />
                            </font>
                         </Label>
-                        <Label layoutX="285.0" layoutY="213.0" prefHeight="32.0" prefWidth="89.0" styleClass="col-gray70" text="Tablet" textFill="WHITE">
+                        <Label layoutX="273.0" layoutY="131.0" prefHeight="32.0" prefWidth="89.0" styleClass="col-gray70" text="Tablet" textFill="WHITE">
                            <font>
                               <Font size="22.0" />
                            </font>
                         </Label>
-                        <Rectangle arcHeight="300.0" arcWidth="30.0" fill="#1f93ff00" height="28.0" layoutX="219.0" layoutY="215.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: white;" width="46.0" />
-                        <JFXToggleButton fx:id="tgbkeyboard" alignment="BASELINE_CENTER" layoutX="209.0" layoutY="201.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" />
-                        <Button fx:id="btndefaultsetting" layoutX="378.0" layoutY="334.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="54.0" textFill="WHITE">
+                        <Rectangle arcHeight="300.0" arcWidth="30.0" fill="#1f93ff00" height="28.0" layoutX="207.0" layoutY="133.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: white;" width="46.0" />
+                        <JFXToggleButton fx:id="tgbkeyboard" alignment="BASELINE_CENTER" layoutX="197.0" layoutY="119.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" />
+                        <Button fx:id="btndefaultsetting" layoutX="385.0" layoutY="189.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="54.0" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
@@ -568,11 +572,14 @@
                               <String fx:value="cmbtrasperant" />
                            </styleClass>
                         </Button>
-                        <Label layoutX="123.0" layoutY="351.0" styleClass="col-gray70" text="Apply Default Setting" textFill="WHITE">
+                        <Label layoutX="92.0" layoutY="207.0" styleClass="col-gray70" text="Apply Default Setting" textFill="WHITE">
                            <font>
                               <Font size="22.0" />
                            </font>
                         </Label>
+                        <Line endX="570.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="110.0" />
+                        <Line endX="570.0" layoutX="10.0" layoutY="10.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="180.0" />
+                        <Line endX="570.0" layoutX="20.0" layoutY="20.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="260.0" />
                      </children>
                   </AnchorPane>
                </content>
