--- a/Machine_BubblePoint_4.3/src/report/pdfselection.fxml
+++ b/Machine_BubblePoint_4.3/src/report/pdfselection.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="500.0" minWidth="650.0" prefHeight="504.0" prefWidth="659.0" styleClass="bgwhite" stylesheets="@../application/new_application.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.PdfselectionController">
+<AnchorPane minHeight="500.0" minWidth="650.0" prefHeight="527.0" prefWidth="659.0" styleClass="bgwhite" stylesheets="@../application/new_application.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.PdfselectionController">
    <children>
       <ImageView fitHeight="70.0" fitWidth="654.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
@@ -42,7 +42,7 @@
             </LinearGradient>
          </stroke>
       </Line>
-      <Button fx:id="pdfsave" layoutX="168.0" layoutY="429.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="150.0" style="-fx-background-radius: 50;" styleClass="linear-grad-to-bottom-right" text="Save to Pdf" textFill="WHITE">
+      <Button fx:id="pdfsave" layoutX="168.0" layoutY="457.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="150.0" style="-fx-background-radius: 50;" styleClass="linear-grad-to-bottom-right" text="Save to Pdf" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -80,19 +80,19 @@
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <Label layoutX="79.0" layoutY="328.0" prefHeight="26.0" prefWidth="68.0" styleClass="col-gray70" text="Graph" textFill="#666666bf">
+      <Label layoutX="79.0" layoutY="324.0" prefHeight="26.0" prefWidth="68.0" styleClass="col-gray70" text="Graph" textFill="#666666bf">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
       <ImageView fx:id="pic" fitHeight="64.0" fitWidth="116.0" layoutX="362.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
-      <CheckBox fx:id="flowvspre" layoutX="222.0" layoutY="331.0" mnemonicParsing="false" selected="true" text="Flow vs Pressure" />
-      <CheckBox fx:id="chkrow" layoutX="79.0" layoutY="389.0" mnemonicParsing="false" selected="true" styleClass="col-gray70" text="Row Data">
+      <CheckBox fx:id="flowvspre" layoutX="222.0" layoutY="327.0" mnemonicParsing="false" selected="true" text="Flow vs Pressure" />
+      <CheckBox fx:id="chkrow" layoutX="79.0" layoutY="373.0" mnemonicParsing="false" selected="true" styleClass="col-gray70" text="Row Data">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </CheckBox>
-      <Button fx:id="excelsave" layoutX="343.0" layoutY="429.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="150.0" style="-fx-background-radius: 50;" styleClass="linear-grad-to-bottom-right" text="Save to Excel" textFill="WHITE">
+      <Button fx:id="excelsave" layoutX="343.0" layoutY="457.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="150.0" style="-fx-background-radius: 50;" styleClass="linear-grad-to-bottom-right" text="Save to Excel" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -100,12 +100,17 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <CheckBox fx:id="chkcoverpage" layoutX="216.0" layoutY="390.0" mnemonicParsing="false" selected="true" styleClass="col-gray70" text="Cover Page">
+      <CheckBox fx:id="chkcoverpage" layoutX="216.0" layoutY="374.0" mnemonicParsing="false" selected="true" styleClass="col-gray70" text="Cover Page">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </CheckBox>
-      <Button fx:id="btnbrows1" layoutX="354.0" layoutY="392.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Browse Cover image" />
+      <Button fx:id="btnbrows1" layoutX="354.0" layoutY="376.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Browse Cover image" />
       <ImageView fx:id="pic1" fitHeight="91.0" fitWidth="116.0" layoutX="512.0" layoutY="351.0" pickOnBounds="true" preserveRatio="true" />
+      <CheckBox fx:id="chsampleinfo" layoutX="216.0" layoutY="410.0" mnemonicParsing="false" selected="true" styleClass="col-gray70" text="Sample Information" visible="false">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </CheckBox>
    </children>
 </AnchorPane>
